# swarm_behaviors

./: README.md  index.md  optimal coverage path generation
lib/angle/: CMakeLists.txt  README.md  package.xml
lib/angle/include/: angle.h
lib/angle/src/: angle.cpp
lib/angle/test/: test_angle.cpp
lib/boustrophedon_path/: CMakeLists.txt  README.md  package.xml
lib/boustrophedon_path/include/: boustrophedon_path.h
lib/boustrophedon_path/param/: boustrophedon_path.yaml
lib/boustrophedon_path/src/: boustrophedon_path.cpp
lib/cps_behavior/: CMakeLists.txt  README.md  package.xml
lib/cps_behavior/include/: cps_behavior.h
lib/cps_behavior/src/: cps_behavior.cpp
lib/position/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lib/position/docs/: manifest.yaml
lib/position/include/: position.h
lib/position/param/: position.yaml
lib/position/src/: position.cpp
lib/sector/: CMakeLists.txt  README.md  package.xml
lib/sector/include/: sector.h
lib/sector/src/: sector.cpp
lib/swarm_behaviors_flocking/: CMakeLists.txt  README_position.md  package.xml
lib/swarm_behaviors_position/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lib/swarm_behaviors_velocity/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lib/swarm_behaviors_velocity/docs/: manifest.yaml
lib/swarm_behaviors_velocity/docs/html/: annotated.html  classes.html  classvelocity-members.html  classvelocity.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index-msg.html  index.html  velocity_8cpp.html  velocity_8cpp__incl.map  velocity_8cpp__incl.md5  velocity_8cpp_source.html  velocity_8h.html  velocity_8h__dep__incl.md5  velocity_8h__incl.map  velocity_8h_source.html
lib/swarm_behaviors_velocity/include/: velocity.h
lib/swarm_behaviors_velocity/src/: velocity.cpp
lib/swarm_kinematics/: CMakeLists.txt  README.md  package.xml
lib/targets/: CMakeLists.txt  README.md  package.xml
lib/uav_behavior/: CMakeLists.txt  README.md  package.xml
lib/uav_coverage/: CMakeLists.txt  README.md  package.xml
lib/uav_tracking/: CMakeLists.txt  README.md  package.xml
lib/ugv_behavior/: CMakeLists.txt  README.md  package.xml
lib/ugv_coverage/: CMakeLists.txt  README.md  package.xml
lib/velocity/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
swarm_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml
uav_coverage/: CMakeLists.txt  README.md  package.xml
uav_coverage/include/: uav_coverage.h
uav_coverage/launch/: uav_coverage.launch
uav_coverage/param/: uav_coverage.yaml
uav_coverage/src/: uav_coverage.cpp
uav_flocking/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_flocking/docs/: manifest.yaml
uav_flocking/launch/: uav_flocking_coverage.launch  uav_flocking_tracking.launch
uav_flocking/param/: uav_flocking.yaml
uav_flocking/src/: uav_coverage.cpp  uav_tracking.cpp
uav_local_coverage/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_local_coverage/docs/: manifest.yaml
uav_local_coverage/launch/: uav_local_coverage.launch
uav_local_coverage/param/: uav_local_coverage.yaml
uav_local_coverage/src/: uav_local_coverage.cpp
uav_optimal_coverage/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_optimal_coverage/docs/: manifest.yaml
uav_optimal_coverage/docs/html/: annotated.html  classes.html  classuav__optimal__coverage-members.html  classuav__optimal__coverage.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a61f22007e0f347cded0d82030ee545d.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  lib_2uav__optimal__coverage_8cpp.html  lib_2uav__optimal__coverage_8cpp__incl.map  lib_2uav__optimal__coverage_8cpp__incl.md5  lib_2uav__optimal__coverage_8cpp_source.html  uav__optimal__coverage_8cpp.html  uav__optimal__coverage_8cpp__incl.map  uav__optimal__coverage_8cpp__incl.md5  uav__optimal__coverage_8cpp_source.html  uav__optimal__coverage_8h.html  uav__optimal__coverage_8h__dep__incl.map  uav__optimal__coverage_8h__dep__incl.md5  uav__optimal__coverage_8h__incl.map  uav__optimal__coverage_8h__incl.md5  uav__optimal__coverage_8h_source.html
uav_optimal_coverage/include/lib/: uav_optimal_coverage.h
uav_optimal_coverage/launch/: uav_optimal_coverage.launch
uav_optimal_coverage/param/: uav_optimal_coverage.yaml
uav_optimal_coverage/src/: uav_optimal_coverage.cpp
uav_optimal_coverage/src/lib/: uav_optimal_coverage.cpp
uav_random_direction/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_random_direction/docs/: manifest.yaml
uav_random_direction/launch/: uav_random_direction.launch
uav_random_direction/param/: uav_random_direction.yaml
uav_random_direction/src/: uav_random_direction.cpp
uav_simple_tracking/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_simple_tracking/docs/: manifest.yaml
uav_simple_tracking/launch/: uav_simple_tracking.launch
uav_simple_tracking/param/: uav_simple_tracking.yaml
uav_simple_tracking/src/: uav_simple_tracking.cpp
uav_tracking/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
uav_tracking/include/: uav_tracking.h
uav_tracking/include/lib/: uav_flocking_tracking.h  uav_simple_tracking.h  uav_tracking_behavior.h
uav_tracking/launch/: uav_tracking.launch
uav_tracking/param/: uav_tracking.yaml
uav_tracking/src/: uav_tracking.cpp
uav_tracking/src/lib/: uav_flocking_tracking.cpp  uav_simple_tracking.cpp  uav_tracking_behavior.cpp
ugv_random_walk/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ugv_random_walk/docs/: manifest.yaml
ugv_random_walk/launch/: ugv_random_walk.launch
ugv_random_walk/param/: ugv_random_walk.yaml
ugv_random_walk/src/: ugv_random_walk.cpp
(+346 files in other folders)
