<?xml version="1.0"?>
<package format="2">
    <name>swarm_behaviors</name>
    <version>1.3.0</version>
    <description>The swarm behaviors library contains implementations of swarm algorithms. It is part of the swarm library.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>Apache License 2.0</license>

    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">https://wiki.ros.org/swarm_behaviors</url>

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <author email="sende@lakeside-labs.com">Micha Sende</author>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>swarm_behaviors_position</exec_depend>
    <exec_depend>swarm_behaviors_velocity</exec_depend>
    <exec_depend>uav_local_coverage</exec_depend>
    <exec_depend>uav_optimal_coverage</exec_depend>
    <exec_depend>uav_random_direction</exec_depend>
    <exec_depend>uav_simple_tracking</exec_depend>
    <exec_depend>ugv_random_walk</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <metapackage />
    </export>
</package>
