<?xml version="1.0"?>
<package format="2">
  <name>uav_optimal_coverage</name>
  <version>1.3.0</version>
  <description>A package that performs optimal coverage with a swarm of unmanned aerial vehicles (UAVs). The UAVs optimally divide the area to be covered among each other.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://wiki.ros.org/uav_optimal_coverage</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="sende@lakeside-labs.com">Micha Sende</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>cpswarm_msgs</depend>
  <depend>swarm_behaviors_position</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
