<?xml version="1.0"?>
<package format="2">
  <name>uav_tracking</name>
  <version>1.3.0</version>
  <description>A package that tracks a target with an unmanned aerial vehicle (UAV) using different types of algorithms.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://wiki.ros.org/uav_tracking</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="sende@lakeside-labs.com">Micha Sende</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>random_numbers</depend>
  <depend>geometry_msgs</depend>
  <depend>cpswarm_msgs</depend>
  <depend>swarm_behaviors_flocking</depend>
  <depend>swarm_behaviors_position</depend>
  <depend>swarm_behaviors_velocity</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
