<?xml version="1.0"?>
<package format="2">
  <name>swarm_behaviors_velocity</name>
  <version>1.3.0</version>
  <description>A package that provides velocity related functionalities.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://wiki.ros.org/swarm_behaviors_velocity</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cpswarm_msgs</depend>
  <depend>swarm_behaviors_position</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
